<resources>
    <string name="app_name">SPOC Gallery</string>
    <string name="title_activity_navigation">Gallery</string>

    <string name="title_section1" translatable="false">Section 1</string>
    <string name="title_section2" translatable="false">Section 2</string>
    <string name="title_section3" translatable="false">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="details_label_fileInfo">File Info</string>
    <string name="details_label_dateTaken">Date taken:</string>
    <string name="details_label_fileSize">File size:</string>
    <string name="details_label_location">Location:</string>
    <string name="details_label_coordinates">Coordinates:</string>
    <string name="details_label_savedTo">Saved to:</string>
    <string name="details_label_filePath">File path:</string>
    <string name="details_label_resolution">Resolution:</string>
    <string name="details_label_cameraSettings">Camera Settings</string>
    <string name="details_label_cameraModel">Model:</string>
    <string name="details_label_aperture">Aperture:</string>
    <string name="details_label_exposureTime">Exposure time:</string>
    <string name="details_label_flash">Flash:</string>
    <string name="details_label_focalLength">Focal length:</string>
    <string name="details_label_isoValue">ISO value:</string>
    <string name="details_menu_showDetails">Show details</string>
    <string name="details_title">Details</string>
    <string name="close">Close</string>
    <string name="details_message_lookingUpLocation"><![CDATA[<i>Looking up location…</i>]]></string>
    <string name="details_message_unknowLocation"><![CDATA[<i>Unknown (No internet?)</i>]]></string>
    <string name="details_labe_digitalZoomFactor">Digital zoom amount:</string>
    <string name="details_message_flashOn">On</string>
    <string name="details_message_flashOff">Off</string>
    <string name="not_available">N/A</string>
    <string name="navigation_date">Date</string>
    <string name="navigation_places">Places</string>
    <string name="navigation_people">People</string>
    <string name="navigation_tags">Tags</string>
    <string name="navigation_folders">Folders</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_about_summary">Information about the app and used software.</string>
    <string name="preferences_webPage_title">Visit webpage</string>
    <string name="preferences_webPage_summary">http://github.com/mrolcsi/SPOC</string>
    <string name="details_action_rotate">Rotate</string>
    <string name="details_action_delete">Delete</string>
    <string name="details_action_share">Share…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_title_areYouSure">Are you sure?</string>
    <string name="dialog_delete_message">Are you sure you want do delete this picture?</string>
</resources>
