<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_home"
            android:checked="true"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_item_1"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/title_section1" />

        <item
            android:id="@+id/navigation_item_2"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/title_section2" />

        <item
            android:id="@+id/navigation_item_3"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/title_section3" />
    </group>
</menu>